mp12_microarch_twotier_starter/premium_service/premium_deployment.yaml
# Starter Kubernetes Deployment for the Premium Tier service.
#
# This YAML defines a deployment that runs both the Flask API and Envoy proxy
# in the 'premium-service' namespace. 
#
# TODO: Fill in the Kubernetes Deployment spec here.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: premium-tier-service
  namespace: premium-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: premium-app
  template:
    metadata:
      labels:
        app: premium-app
    spec:
      containers:
      - name: premium-tier-app-docker
        image: amyyuan2244/premium-tier-app-docker:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      - name: envoy-container
        image: envoyproxy/envoy:v1.22.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: envoy-config-volume
          mountPath: /etc/envoy/
        imagePullPolicy: Always
      volumes:
      - name: envoy-config-volume
        configMap:
          name: premium-envoy-config

---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: premium-service
  name: premium-job-role
rules:
- apiGroups: ["batch"]
  resources: ["jobs"]
  verbs: ["create", "watch", "get", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: bind-premium-job-role
  namespace: premium-service
subjects:
- kind: ServiceAccount
  name: default
  namespace: premium-service
roleRef:
  kind: Role
  name: premium-job-role
  apiGroup: rbac.authorization.k8s.io
